[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/HUD/Splash.png" type="Texture" id=1]
[ext_resource path="res://Assets/Audio/menu_music.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sprites/Characters/hero.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/weapons/revy.png" type="Texture" id=4]
[ext_resource path="res://Assets/Audio/Revy.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/weapons/flash.png" type="Texture" id=6]
[ext_resource path="res://menu_ball.gd" type="Script" id=7]
[ext_resource path="res://ejection.gd" type="Script" id=8]
[ext_resource path="res://Menu.gd" type="Script" id=9]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/Fonts/Beyond Wonderland.ttf"

[sub_resource type="DynamicFont" id=2]
size = 28
use_mipmaps = true
use_filter = true
font_data = SubResource( 6 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 106.032
height = 0.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 104.376, 112.251 )

[node name="Menu" type="Node2D"]
script = ExtResource( 9 )

[node name="Splash" type="Sprite" parent="."]
position = Vector2( 728, 240 )
texture = ExtResource( 1 )

[node name="Play" type="Button" parent="."]
margin_left = 608.0
margin_top = 224.0
margin_right = 708.0
margin_bottom = 262.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "P lay"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
margin_left = 624.0
margin_top = 312.0
margin_right = 724.0
margin_bottom = 350.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 616.0
margin_top = 400.0
margin_right = 716.0
margin_bottom = 438.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hero" type="KinematicBody2D" parent="."]
position = Vector2( 176, 352 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
script = ExtResource( 7 )

[node name="shape" type="CollisionShape2D" parent="hero"]
position = Vector2( -1.93167, -4.76837e-06 )
shape = SubResource( 3 )

[node name="weapons" type="Node2D" parent="hero"]

[node name="Revy" type="Node2D" parent="hero/weapons"]

[node name="sprite" type="AnimatedSprite" parent="hero/weapons/Revy"]
position = Vector2( 232.168, 14.558 )
scale = Vector2( 2, 2 )
z_index = 1
frames = SubResource( 4 )
animation = "shoot"

[node name="shoot" type="AudioStreamPlayer" parent="hero/weapons/Revy"]
stream = ExtResource( 5 )

[node name="flash" type="Sprite" parent="hero/weapons/Revy"]
visible = false
position = Vector2( 500.092, -36.7987 )
texture = ExtResource( 6 )

[node name="ejection" type="Position2D" parent="hero/weapons/Revy"]
position = Vector2( 248.072, -55.3101 )
script = ExtResource( 8 )

[node name="rays" type="Node2D" parent="hero/weapons/Revy"]

[node name="ray" type="RayCast2D" parent="hero/weapons/Revy/rays"]
position = Vector2( 369.972, -36.7987 )
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 3

[node name="body" type="Node2D" parent="hero"]

[node name="hero" type="Sprite" parent="hero/body"]
position = Vector2( -6.72705, -63.6279 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="hero/body/hero"]
position = Vector2( 107.11, 147.158 )
scale = Vector2( 3, 3 )
emission_shape = 1
emission_sphere_radius = 1.48
spread = 0.0
gravity = Vector2( 0, -98 )
color = Color( 0.960784, 0.960784, 0.960784, 1 )

[node name="dash_cast" type="RayCast2D" parent="hero/body/hero"]
position = Vector2( 6.72705, 63.6279 )
enabled = true
cast_to = Vector2( 800, 0 )
collision_mask = 4

[node name="coll_area" type="Area2D" parent="hero/body"]
position = Vector2( 3.8147e-06, -3.05176e-05 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hero/body/coll_area"]
position = Vector2( 4.76837e-07, 9.2764 )
shape = SubResource( 5 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="body_entered" from="hero/body/coll_area" to="hero" method="_on_coll_area_body_entered"]
[connection signal="body_exited" from="hero/body/coll_area" to="hero" method="_on_coll_area_body_exited"]
